<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="@bool/fitsSystemWindows"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_kitkat_height"
            android:background="?colorPrimary" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_lollipop_height"
            android:background="?colorPrimaryDark" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:elevation="4dp"
            app:theme="@style/ToolbarTheme" />
    </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/nombre_candidata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding15"
                    android:text="candidata"
                    android:textSize="@dimen/nombre_candidata" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imagen_extendida"
                        android:layout_width="@dimen/foto_candidata"
                        android:layout_height="@dimen/foto_candidata"
                        android:layout_marginLeft="@dimen/padding15"
                        android:src="@drawable/mamasita"
                        android:transitionName="@string/nombre_transicion_imagen" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/padding15"
                    android:layout_marginRight="@dimen/padding15">

                    <TextView
                        android:id="@+id/edad_candidata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/edad"
                        android:textSize="@dimen/info_candidata" />

                    <TextView
                        android:id="@+id/medidas_candidata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/medidas"
                        android:textSize="@dimen/info_candidata" />


                    <TextView
                        android:id="@+id/estatura_candidata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/estatura"
                        android:textSize="@dimen/info_candidata" />

                    <TextView
                        android:id="@+id/peso_candidata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/peso"
                        android:textSize="@dimen/info_candidata" />

                    <TextView
                        android:id="@+id/profesion_candidata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/profesion"
                        android:textSize="@dimen/info_candidata" />

                    <TextView
                        android:id="@+id/procedencia_candidata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/procedencia"
                        android:textSize="@dimen/info_candidata" />

                    <TextView
                        android:id="@+id/calificacion_candidata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/calificacion"
                        android:textSize="@dimen/info_candidata" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding15">

                <GridView
                    android:id="@+id/gridFotos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnWidth="100dp"
                    android:horizontalSpacing="2dp"
                    android:numColumns="auto_fit"
                    android:verticalSpacing="2dp" />

            </LinearLayout>
        </LinearLayout>


</LinearLayout>